--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>TITLE</title>
+    <title>CHIP-8 Emulator</title>
     <style>
         html,
         body,
@@ -23,6 +23,8 @@
 <canvas id="glcanvas" tabindex='1'></canvas>
 <!-- Minified and statically hosted version of https://github.com/not-fl3/miniquad/blob/master/native/sapp-wasm/js/gl.js -->
 <script src="https://not-fl3.github.io/miniquad-samples/gl.js"></script>
+<script src="js/sapp_jsutils.js"></script>
+<script src="js/quad-url.js"></script>
 <script>load("wasm-chip8.wasm");</script> <!-- Your compiled wasm file -->
 </body>
 
